# Final-Project-ML

./: .gitignore  README.md  admin.py  customer.py  logistics_kpi_template.csv  pyproject.toml  requirements.txt  test_cp1252.csv
.claude/: settings.local.json
controllers/: __init__.py  admin_category_controller.py  admin_controller.py  admin_kpi_controller.py  admin_order_controller.py  admin_product_controller.py  admin_user_controller.py  admin_voucher_controller.py  auth_controller.py  cart_controller.py  favorites_controller.py  menu_controller.py  order_controller.py  user_controller.py
database/: admin_schema.sql  bulk_insert_products.py  import_predictions_to_db.py  sample_predictions_data.py  schema.sql
log_model/: .gitignore  MANIFEST.in  Makefile  best_hyperparameters.csv  help.bat  pyproject.toml  quick.ps1  requirements.txt  setup.py  start.bat  stop.bat
log_model/backups/: README.md
log_model/data/: .gitkeep  logistics_dataset.csv
log_model/logs/: README.md
log_model/models/: README.md  Ridge_Regression_20251121_033124.pkl  encoders_20251121_033124.pkl  scaler_20251121_033124.pkl
log_model/notebooks/: exploratory_data_analysis.ipynb
log_model/scripts/: README.md  restart.bat  shutdown.bat  startup.bat  status.bat
log_model/src/: __init__.py
log_model/src/ml/: __init__.py  compare_model.py  hyperparameter_tuning.py  predict.py  residuals_analysis.py  train_model.py
log_model/src/utils/: __init__.py  monitoring.py
log_model/tests/: test_model.py
log_model/visualization_outputs/: model_comparison_report.txt
models/: __init__.py  cart.py  notification.py  order.py  product.py  review.py  store.py  topping.py  user.py  voucher.py
models/store_models/: store_12_model.pkl  store_14_model.pkl  store_15_model.pkl  store_16_model.pkl  (+28 more)
revenue_forecasting/: predictor.py
scripts/: README.md  add_category.py  add_product.py  bulk_import_products.py  bulk_import_products_excel.py  create_excel_template.py  products_example.csv  products_template.xlsx
services/: ai_forecast_agent.py
ui/: login.ui
ui_generated/: admin_dashboard.py  admin_login.py  admin_main_window.py  admin_orders.py  cart.py  favorites.py  login.py  main_window.py  menu.py  register.py
utils/: __init__.py  config.py  database.py  helpers.py  validators.py
views/: __init__.py  admin_ai_chat_ex.py  admin_categories_ex.py  admin_dashboard_ex.py  admin_login_ex.py  admin_logistic_kpi_ex.py  admin_main_window_ex.py  admin_ml_analytics_ex.py  admin_orders_ex.py  admin_products_ex.py  admin_users_ex.py  admin_vouchers_ex.py  cart_ex.py  checkout_dialog.py  favorites_ex.py  login_ex.py  main_window_ex.py  menu_ex.py  orders_ex.py  product_detail_dialog.py  profile_ex.py  register_ex.py
(+101 files in other folders)
