[project]
name = "coffee-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python==8.2.0",
    "pyqt6==6.6.1",
    "pyqt6-qt6==6.6.1",
    "pyqt6-sip==13.6.0",
    "fastapi==0.109.0",
    "joblib==1.3.2",
    "lightgbm==4.3.0",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "optuna==3.5.0",
    "pandas==2.1.4",
    "pydantic==2.5.3",
    "scikit-learn==1.4.0",
    "seaborn==0.13.1",
    "uvicorn==0.27.0",
    "xgboost==2.0.3",
    "statsmodels>=0.14.0",
    "pmdarima>=2.0.0",
    "prophet>=1.1.0",
]
